Fix lineup field invisible on mobile due to flex-basis: 0 in column layout

--- a/webapp/src/app/team/lineup/lineup.component.scss
+++ b/webapp/src/app/team/lineup/lineup.component.scss
@@ -29,9 +29,9 @@
   max-width: 800px;
 
   @media (max-width: $mobile-breakpoint) {
+    flex: none;
     width: 100%;
     max-width: 100%;
-    overflow-x: hidden;
   }
 }
 
